# S3_DeformFDM

./: .gitignore  CMakeLists.txt  pixi.toml
GLKLib/: CMakeLists.txt  GLKLib.cpp  GLKLib.h
QMeshLib/: CMakeLists.txt  QMeshTetra.cpp
ShapeLab/: CMakeLists.txt  DeformTet.cpp  DeformTet.h  Fabrication.cpp  FileIO.cpp  FileIO.h  GcodeGeneration.cpp  IsoLayerGeneration.cpp  MainWindow.cpp  MainWindow.h  Paths.cpp  Paths.h  PrincipleStressField.cpp  PrincipleStressField.h  Remesher.cpp  Remesher.h  SparseSolvers.h  SupportGeneration.cpp  alphanum.hpp  dirent.h  heatMethod.cpp  heatMethod.h  heatmethodfield.cpp  main.cpp  remesh_smoketest.cpp  toolpathGeneration.cpp  toolpathGeneration.h
